syntax = "proto3";
option go_package="./;proto_import";
import "google/protobuf/empty.proto";
import "base.proto";

service Greeter{
  rpc SayHello(HelloRequest) returns (HelloReply);
  rpc Ping(google.protobuf.Empty ) returns (Pong);
}

message HelloRequest{
  string name =1 ;
}

message  HelloReply{
  string message=1;

  //message嵌套，可以避免子message被外部使用
  message Result{
    string name=1;
    string url=2;
  }
  repeated Result data=2;
}

